--- a/Live.html
+++ b/Live.html
@@ -216,7 +216,7 @@
 </head>
 <body>
     <div id="video-container">
-        <video id="live-video" src="live_teaser.mp4" autoplay muted loop playsinline></video>
+        <video id="live-video" src="video.mp4" autoplay muted loop playsinline></video>
     </div>
 
     <div class="overlay">
