--- a/Live.html
+++ b/Live.html
@@ -222,7 +222,7 @@
     <div class="overlay">
         <header class="header">
             <div class="profile-info">
-                <img id="profile-pic" src="" alt="Profil" class="profile-pic">
+                <img id="profile-pic" src="foto.jpeg" alt="Profil" class="profile-pic">
                 <span id="profile-name" class="profile-name"></span>
             </div>
             <div class="live-info">
