--- a/Live.html
+++ b/Live.html
@@ -260,7 +260,7 @@
                 redirectTemplate: "Sesi privat akan dimulai dalam <strong>{timeLeft}</strong> detik...",
                 redirectConnecting: "Menghubungkan ke ruang privat...",
                 profiles: [
-                    { name: "Maya", photo: "foto.jpg" }, { name: "Dewi", photo: "dewi.jpg" },
+                    { name: "Maya", photo: "foto.jpeg" }, { name: "Dewi", photo: "dewi.jpg" },
                     { name: "Rina", photo: "rina.jpg" }, { name: "Putri", photo: "putri.jpg" },
                     { name: "Sari", photo: "sari.jpg" }, { name: "Cindy", photo: "cindy.jpg" }
                 ],
