--- a/Live.html
+++ b/Live.html
@@ -260,9 +260,9 @@
                 redirectTemplate: "Sesi privat akan dimulai dalam <strong>{timeLeft}</strong> detik...",
                 redirectConnecting: "Menghubungkan ke ruang privat...",
                 profiles: [
-                    { name: "Maya", photo: "foto.jpeg" }, { name: "Dewi", photo: "dewi.jpg" },
-                    { name: "Rina", photo: "rina.jpg" }, { name: "Putri", photo: "putri.jpg" },
-                    { name: "Sari", photo: "sari.jpg" }, { name: "Cindy", photo: "cindy.jpg" }
+                    { name: "Maya", photo: "foto.jpeg" }, { name: "Dewi", photo: "dewi.jpeg" },
+                    { name: "Rina", photo: "rina.jpeg" }, { name: "Putri", photo: "putri.jpeg" },
+                    { name: "Sari", photo: "sari.jpeg" }, { name: "Cindy", photo: "cindy.jpeg" }
                 ],
                 commentTemplates: [
                     "gilaaa {nama_cewek} cantik bgt 😍", "buka dikit dongg {emoticon_nakal}", "body nya makin jadi aja 👍",
@@ -281,9 +281,9 @@
                 redirectTemplate: "Private session will start in <strong>{timeLeft}</strong> seconds...",
                 redirectConnecting: "Connecting to private room...",
                 profiles: [
-                    { name: "Jessica", photo: "maya.jpg" }, { name: "Bella", photo: "dewi.jpg" },
-                    { name: "Sophia", photo: "rina.jpg" }, { name: "Chloe", photo: "putri.jpg" },
-                    { name: "Amanda", photo: "sari.jpg" }, { name: "Cindy", photo: "cindy.jpg" }
+                    { name: "Jessica", photo: "foto.jpeg" }, { name: "Bella", photo: "dewi.jpeg" },
+                    { name: "Sophia", photo: "rina.jpeg" }, { name: "Chloe", photo: "putri.jpeg" },
+                    { name: "Amanda", photo: "sari.jpeg" }, { name: "Cindy", photo: "cindy.jpeg" }
                 ],
                 commentTemplates: [
                     "omg {nama_cewek} you're so beautiful 😍", "show a little more {emoticon_nakal}", "your body is getting hotter 👍",
